--- a/test_module/fixtures/test_config.cfg
+++ b/test_module/fixtures/test_config.cfg
@@ -1,11 +1,11 @@
 [commands]
 git = git
 # LINUX
-create_venv = /usr/bin/python3 -m venv __venv__
-python = __venv__/bin/python
+#create_venv = /usr/bin/python3 -m venv __venv__
+#python = __venv__/bin/python
 # WINDOWS
-#create_venv = python -m venv __venv__
-#python = __venv__\Scripts\python
+create_venv = python -m venv __venv__
+python = __venv__\Scripts\python
 #
 ## FOLLOWING ARE USED AFTER .../python -m
 ## DO NOT CHANGE IF DEFINITELY NO NEED TO
