change test repo to mine

--- a/test_module/fixtures/test_config.cfg
+++ b/test_module/fixtures/test_config.cfg
@@ -14,7 +14,7 @@ pip_install_testpypi = pip install --extra-index-url https://test.pypi.org/pypi
 pytest = pytest
 
 [tests]
-repo = https://github.com/cvut/ghia
+repo = https://github.com/petrnymsa/mi-pyt-ghia.git
 branch = modular
 tests = tests/test_errors.py tests/test_help.py tests/test_web_smoke.py
 entrypoint = ghia
